change from mongo to redis database
